new sources added

--- a/FastNews/FastNews/FastNews.csproj
+++ b/FastNews/FastNews/FastNews.csproj
@@ -15,5 +15,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+	  <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+		  <_Parameter1>NewsTests</_Parameter1>
+	  </AssemblyAttribute>
   </ItemGroup>
 </Project>
