--- a/NewsTests/NewsTests.csproj
+++ b/NewsTests/NewsTests.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FastNews\FastNews\FastNews.csproj" />
+  </ItemGroup>
+
 </Project>
